src/test/ui/issues/issue-22872.stderr
error[E0277]: `<P as Process<'_>>::Item` is not an iterator
  --> $DIR/issue-22872.rs:20:40
   |
LL |     let _: Box<dyn for<'b> Wrap<'b>> = Box::new(Wrapper(process));
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ `<P as Process<'_>>::Item` is not an iterator
   |
   = help: the trait `std::iter::Iterator` is not implemented for `<P as Process<'_>>::Item`
   = help: consider adding a `where <P as Process<'_>>::Item: std::iter::Iterator` bound
   = note: required because of the requirements on the impl of `for<'b> Wrap<'b>` for `Wrapper<P>`
   = note: required for the cast to the object type `dyn for<'b> Wrap<'b>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
